--- a/index.html
+++ b/index.html
@@ -206,10 +206,10 @@
 
     /* Gallery */
     .grid{
-      margin-top: 36px;
-      display:grid;
-      grid-template-columns: repeat(3, minmax(0, 1fr));
-      gap: 18px;
+        margin-top: 36px;
+        display:grid;
+        grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+        gap: 18px;
     }
     .photo{
       border-radius: var(--radius);
