--- a/index.html
+++ b/index.html
@@ -379,6 +379,23 @@
       .line{display:none;}
       .mem-card{max-width: 100%;}
     }
+    /* Daha iyi mobil / tablet uyumu */
+    @media (max-width: 900px){
+        section{ padding: 44px 14px 70px; }
+        .panel{ padding: 20px; }
+        .photo img{ height: 280px; }
+    }
+
+    @media (max-width: 520px){
+    h1{ font-size: 40px; }
+        .sub{ font-size: 14px; padding: 0 6px; }
+        .kicker{ letter-spacing: .22em; }
+        .panel{ border-radius: 18px; }
+        .box{ padding: 14px 10px; border-radius: 16px; }
+        .num{ font-size: 34px; }
+        .tabs{ gap: 14px; }
+        .tab{ padding: 8px 4px; }
+    }
   </style>
 </head>
 
