--- a/index.html
+++ b/index.html
@@ -226,11 +226,10 @@
       border-color: rgba(215,179,90,.22);
     }
     .photo img{
-      width:100%;
-      height: 320px;
-      object-fit: cover;
-      display:block;
-      filter: saturate(1.05) contrast(1.05);
+    width:100%;
+    aspect-ratio: 3 / 4;
+    height: auto;
+    object-fit: cover;
     }
     .photo .cap{
       position:absolute; left:14px; right:14px; bottom:14px;
