--- a/index.html
+++ b/index.html
@@ -513,12 +513,15 @@
       // Fotoğrafları aynı klasöre "images" klasörü açıp koy:
       // images/1.jpg, images/2.jpg ...
       photos: [
-        { src: "images/1.jpg", cap: "Anı #1" },
-        { src: "images/2.jpg", cap: "Anı #2" },
-        { src: "images/3.jpg", cap: "Anı #3" },
-        { src: "images/4.jpg", cap: "Anı #4" },
-        { src: "images/5.jpg", cap: "Anı #5" },
-        { src: "images/6.jpg", cap: "Anı #6" },
+        { src: "images/foto1.jpeg", cap: "Anı #1" },
+        { src: "images/foto2.jpeg", cap: "Anı #2" },
+        { src: "images/foto3.jpeg", cap: "Anı #3" },
+        { src: "images/foto4.jpeg", cap: "Anı #4" },
+        { src: "images/foto5.jpeg", cap: "Anı #5" },
+        { src: "images/foto6.jpeg", cap: "Anı #6" },
+        { src: "images/foto7.jpeg", cap: "Anı #6" },
+        { src: "images/foto8.jpeg", cap: "Anı #6" },
+        { src: "images/foto9.jpeg", cap: "Anı #6" },
       ],
 
       memories: [
