--- a/index.html
+++ b/index.html
@@ -513,15 +513,15 @@
       // Fotoğrafları aynı klasöre "images" klasörü açıp koy:
       // images/1.jpg, images/2.jpg ...
       photos: [
-        { src: "images/foto1.jpeg", cap: "Anı #1" },
-        { src: "images/foto2.jpeg", cap: "Anı #2" },
-        { src: "images/foto3.jpeg", cap: "Anı #3" },
-        { src: "images/foto4.jpeg", cap: "Anı #4" },
-        { src: "images/foto5.jpeg", cap: "Anı #5" },
-        { src: "images/foto6.jpeg", cap: "Anı #6" },
-        { src: "images/foto7.jpeg", cap: "Anı #6" },
-        { src: "images/foto8.jpeg", cap: "Anı #6" },
-        { src: "images/foto9.jpeg", cap: "Anı #6" },
+        { src: "images/foto1.jpeg", cap: "12 Kasım 2025" },
+        { src: "images/foto2.jpeg", cap: "19 Kasım 2025" },
+        { src: "images/foto3.jpeg", cap: "20 Kasım 2025" },
+        { src: "images/foto4.jpeg", cap: "21 Kasım 2025" },
+        { src: "images/foto5.jpeg", cap: "3 Aralık 2025" },
+        { src: "images/foto6.jpeg", cap: "6 Aralık 2025" },
+        { src: "images/foto7.jpeg", cap: "11 Aralık 2025" },
+        { src: "images/foto8.jpeg", cap: "11 Aralık 2025" },
+        { src: "images/foto9.jpeg", cap: "11 Aralık 2025" },
       ],
 
       memories: [
