--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
         <div class="panel">
           <div class="panel-inner">
             <div class="together">
-              Birlikte olduğumuz tarih: <b id="anniversaryText">29 Ekim 2025</b>
+              <b id="anniversaryText">29 Ekim 2025</b>
             </div>
 
             <div class="counter" aria-label="İlişki sayacı">
