--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
       <div class="wrap">
         <div class="kicker"><span class="spark">✦</span> YILDIZLARDA YAZILI <span class="spark">✦</span></div>
         <h1><span id="nameA">Yağmur</span> &amp; <span id="nameB">Erberk</span></h1>
-        <p class="sub">Birlikte geçirdiğimiz her saniye, takımyıldızımızda bir yıldız.</p>
+        <p class="sub">Birlikte olduğumuz her an gökyüzündeki yıldızlara bedel.</p>
 
         <div class="panel">
           <div class="panel-inner">
