--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
     <!-- GALLERY -->
     <section id="gallery">
       <div class="wrap">
-        <div class="kicker"><span class="spark">📷</span> YAKALANAN ANLAR</div>
+        <div class="kicker"><span class="spark">📷</span> ŞAHESERLER</div>
         <h1>Galerimiz</h1>
         <p class="sub">Zamanda dondurulmuş en sevdiğimiz anların koleksiyonu.</p>
 
