--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
       <div class="wrap">
         <div class="kicker"><span class="spark">📷</span> ŞAHESERLER</div>
         <h1>Galerimiz</h1>
-        <p class="sub">Zamanda dondurulmuş en sevdiğimiz anların koleksiyonu.</p>
+        <p class="sub">Nice beraber senelere.</p>
 
         <div class="grid" id="galleryGrid"></div>
 
