--- a/index.html
+++ b/index.html
@@ -527,16 +527,30 @@
       memories: [
         {
           side: "left",
-          date: "29 Ekim 2025",
-          title: "Tanıştığımız Gün",
-          text: "Yıldızlar hizalandı ve bizi bir araya getirdi. Her şeyi değiştiren bir an.",
+          date: "24 Ekim 2025",
+          title: "İlk konuştuğumuz gün",
+          text: "Senin fitili yaktığın gün yanii.",
           icon: "✦"
         },
         {
           side: "right",
-          date: "14 Şubat 2026",
-          title: "İlk Sevgililer Günü",
-          text: "Birlikte kutladığımız ilk aşk günü, kahkahalar ve neşeyle dolu.",
+          date: "29 Ekim 2025",
+          title: "İlk Buluştumuz Gün",
+          text: "Herşey o gün başladı.",
+          icon: "♥"
+        },
+        {
+          side: "left",
+          date: "31 Ekim 2025",
+          title: "İlk bana nazlandığın gün",
+          text: "Arı sokmuş da bayılcakmış hallerin hahaha.",
+          icon: "✦"
+        },
+        {
+          side: "right",
+          date: "2 Kasım 2025",
+          title: "İlk trip attığın Gün",
+          text: "Neymiş sabah başkasıyla kahvaltıya gittim sanmışta geç kaldım diye surat yapıyor.",
           icon: "♥"
         }
       ]
