--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
       <div class="wrap">
         <div class="kicker"><span class="spark">📅</span> YOLCULUĞUMUZ</div>
         <h1>Değerli Anılarımız</h1>
-        <p class="sub">Paylaştığımız her an, değerli bir anıya dönüşüyor.</p>
+        <p class="sub">Evlilik tarihi 21 Temmuz burayada yazdım.</p>
 
         <div class="timeline" id="timeline">
           <div id="leftCol" style="display:flex; flex-direction:column; gap:22px; align-items:flex-start;"></div>
@@ -552,7 +552,14 @@
           title: "İlk trip attığın Gün",
           text: "Neymiş sabah başkasıyla kahvaltıya gittim sanmışta geç kaldım diye surat yapıyor.",
           icon: "♥"
-        }
+        },
+        {
+          side: "left",
+          date: "3 Kasım 2025",
+          title: "İlk benden bir şey istediğin gün",
+          text: "Karnın ağrıyoduk dolarex alıp gelmiştim paşama.",
+          icon: "✦"
+        },
       ]
     };
 
