--- a/index.html
+++ b/index.html
@@ -244,13 +244,13 @@
     }
 
     /* Timeline (çakışmasız, satır satır) */
+    /* Timeline container */
     .timeline{
     margin-top: 34px;
     position: relative;
-    display: grid;
-    grid-template-columns: 1fr 70px 1fr;
-    gap: 18px 18px;
-    align-items: start;
+    display: flex;
+    flex-direction: column;
+    gap: 26px;
     }
 
     /* Orta çizgi */
@@ -262,42 +262,58 @@
     transform: translateX(-50%);
     width:2px;
     background: linear-gradient(180deg, transparent, rgba(215,179,90,.55), transparent);
+    pointer-events:none;
     }
 
-    /* Her item kendi satırında */
+    /* Her anı = 1 satır */
     .t-item{
-    display: contents; /* bu kritik: item'i grid satırı gibi kullanır */
+    display:grid;
+    grid-template-columns: 1fr 70px 1fr;
+    align-items:start;
+    gap: 18px;
     }
 
+    /* Dot her satırın ortasında */
     .t-dot{
     grid-column: 2;
-    justify-self: center;
-    align-self: start;
-    width: 10px;
-    height: 10px;
-    border-radius: 999px;
+    justify-self:center;
+    width:10px; height:10px;
+    border-radius:999px;
     background: var(--gold);
     box-shadow: 0 0 0 6px rgba(215,179,90,.16);
     margin-top: 26px;
     }
 
+    /* Kart yerleşimi */
     .t-left{ grid-column: 1; justify-self: start; }
     .t-right{ grid-column: 3; justify-self: end; }
+    .t-empty{ grid-column: 1; }
+    .t-empty-r{ grid-column: 3; }
 
-    /* Kart zaten sende var: .mem-card kullanıyoruz */
     .t-left .mem-card, .t-right .mem-card{ width:min(420px, 100%); }
 
-    /* Mobilde tek kolon */
+    /* Mobil: tek kolon */
     @media (max-width: 780px){
-    .timeline{
+    .timeline{ gap: 16px; }
+    .timeline::before{
+        left: 16px; transform:none;
+    }
+    .t-item{
         grid-template-columns: 1fr;
-        gap: 16px;
+        gap: 10px;
+        padding-left: 18px;
+        position: relative;
     }
-    .timeline::before{ left: 14px; transform:none; }
-    .t-dot{ grid-column: 1; justify-self: start; margin-left: 10px; }
+    .t-dot{
+        grid-column: 1;
+        justify-self:start;
+        margin-top: 14px;
+        margin-left: -18px;
+    }
     .t-left, .t-right{ grid-column: 1; justify-self: stretch; }
-    .t-left .mem-card, .t-right .mem-card{ width: 100%; }
+    .t-left .mem-card, .t-right .mem-card{ width:100%; }
     }
+
 
     .mem-card{
       border-radius: var(--radius);
@@ -665,41 +681,53 @@
     /**************
      * ANILAR OLUŞTUR
      **************/
-const timelineList = document.getElementById("timelineList");
+    const timelineList = document.getElementById("timelineList");
 
-function memCard(m){
-  const el = document.createElement("div");
-  el.className = "mem-card";
-  el.innerHTML = `
-    <div class="mem-meta">
-      <div class="badge">${m.icon}</div>
-      <span>${m.date}</span>
-    </div>
-    <h3>${m.title}</h3>
-    <p>${m.text}</p>
-  `;
-  return el;
-}
+    function memCard(m){
+    const el = document.createElement("div");
+    el.className = "mem-card";
+    el.innerHTML = `
+        <div class="mem-meta">
+        <div class="badge">${m.icon}</div>
+        <span>${m.date}</span>
+        </div>
+        <h3>${m.title}</h3>
+        <p>${m.text}</p>
+    `;
+    return el;
+    }
 
-CONFIG.memories.forEach((m, idx) => {
-  // side yoksa otomatik sırayla sağ/sol yap
-  const side = m.side || (idx % 2 === 0 ? "left" : "right");
+    timelineList.innerHTML = "";
 
-  const row = document.createElement("div");
-  row.className = "t-item";
+    CONFIG.memories.forEach((m, idx) => {
+    const side = m.side || (idx % 2 === 0 ? "left" : "right");
 
-  const dot = document.createElement("div");
-  dot.className = "t-dot";
+    const row = document.createElement("div");
+    row.className = "t-item";
 
-  const holder = document.createElement("div");
-  holder.className = side === "right" ? "t-right" : "t-left";
-  holder.appendChild(memCard(m));
+    const dot = document.createElement("div");
+    dot.className = "t-dot";
 
-  row.appendChild(holder);
-  row.appendChild(dot);
+    const leftCell = document.createElement("div");
+    const rightCell = document.createElement("div");
 
-  timelineList.appendChild(row);
-});
+    if(side === "left"){
+        leftCell.className = "t-left";
+        leftCell.appendChild(memCard(m));
+        rightCell.className = "t-empty-r"; // sağ boş
+    } else {
+        rightCell.className = "t-right";
+        rightCell.appendChild(memCard(m));
+        leftCell.className = "t-empty"; // sol boş
+    }
+
+    row.appendChild(leftCell);
+    row.appendChild(dot);
+    row.appendChild(rightCell);
+
+    timelineList.appendChild(row);
+    });
+
 
 
     /**************
